--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Vite App</title>
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
+
 </head>
 <body>
   <div id="app"></div>
